2013-09-10  Michał Pakuła vel Rutka  <m.pakula@samsung.com>

        Unreviewed. Add myself as a committer.

        * Scripts/webkitpy/common/config/contributors.json:

2013-09-10  Mario Sanchez Prada  <mario.prada@samsung.com>

        [GTK] Test /webkit/atk/getTextInParagraphAndBodyModerate fails
        https://bugs.webkit.org/show_bug.cgi?id=105538

        Reviewed by Chris Fleizach.

        Unskip passing test getTextInParagraphAndBodyModerate.

        * Scripts/run-gtk-tests:
        (TestRunner): Unskip pasing test.

2013-09-09  Mark Lam  <mark.lam@apple.com>

        Remove more references to the deleted js-test-style.css.
        https://bugs.webkit.org/show_bug.cgi?id=120899.

        Reviewed by Ryosuke Niwa.

        * Scripts/webkitpy/to_be_moved/update_webgl_conformance_tests.py:
        (translate_includes):

2013-09-09  Mark Lam  <mark.lam@apple.com>

        Re-landing r155392 (Point Tools scripts to LayoutTests/resources).
        https://bugs.webkit.org/show_bug.cgi?id=120899.

        Not reviewed.

        The webkitpy test failure that resulted in the rollout is due to
        update_webgl_conformance_tests_unittest.py referencing js-test-style.css
        which is to be deleted. Deleting that line fixes the issue.

        * Scripts/make-new-script-test:
        (makePathToSharedSources):
        * Scripts/run-fast-jsc:
        * Scripts/webkitperl/httpd.pm:
        (getDefaultConfigForTestDirectory):
        * Scripts/webkitpy/layout_tests/servers/apache_http_server.py:
        (LayoutTestApacheHttpd.__init__):
        * Scripts/webkitpy/layout_tests/servers/http_server.py:
        (Lighttpd.__init__):
        * Scripts/webkitpy/layout_tests/servers/http_server_integrationtest.py:
        (BaseTest.integration_test_port_and_root):
        * Scripts/webkitpy/layout_tests/servers/http_server_unittest.py:
        (TestHttpServer.test_start_cmd):
        * Scripts/webkitpy/to_be_moved/update_webgl_conformance_tests.py: