@@ -4,6 +4,12 @@
 
         * Scripts/webkitpy/common/config/contributors.json:
 
+2013-09-10  Radu Stavila  <stavila@adobe.com>
+
+        Unreviewed. Added myself as a committer.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2013-09-10  Mario Sanchez Prada  <mario.prada@samsung.com>
 
         [GTK] Test /webkit/atk/getTextInParagraphAndBodyModerate fails
